tests/src/frontend/syntax/invalid/unexpected_catch.sk

fun test(): void {
  1 catch 2
}
